--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,4 @@
-[![Build Status](https://travis-ci.org/larvit/larvitdb-pg.svg?branch=master)](https://travis-ci.org/larvit/larvitdb-pg)
-[![Coverage Status](https://coveralls.io/repos/github/larvit/larvitdb-pg/badge.svg?branch=master)](https://coveralls.io/github/larvit/larvitdb-pg?branch=master)
+image:https://travis-ci.org/larvit/larvitdb-pg.svg?branch=master[] image:https://coveralls.io/repos/github/larvit/larvitdb-pg/badge.svg?branch=master[]
 
 = Database wrapper for pg (PostgreSQL)
 
